--- a/index.html
+++ b/index.html
@@ -61,7 +61,36 @@
 
         <!-- Page Content  -->
         <div id="content">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
 
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                        <i class="fas fa-align-left"></i>
+                        <span>Toggle Sidebar</span>
+                    </button>
+                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i>
+                    </button>
+                    <!--
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Page</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Page</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Page</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Page</a>
+                            </li>
+                        </ul>
+                    </div>
+                    -->
+                </div>
+            </nav>
             <h2>About Me</h2>
             <p></p>
             <div class="line"></div>
@@ -74,16 +103,21 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-header">
-                            Title
+                            Predicting Triathlon Times
                         </div>
                         <!-- <img class="card-img-top" src="static/triathlon.png" alt="Card image cap"> -->
                         <div class="card-body">
-                            <h5 class="card-title">Predicting Triathlon Times</h5>
-                            <p class="card-text">Text</p>
-                            <span>
-                                <a href="http://ec2-34-216-76-122.us-west-2.compute.amazonaws.com/" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
-                                <a href="https://github.com/jgoffin/triathlon" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
-                            </span>
+                            <!-- <h5 class="card-title">Predicting Triathlon Times</h5> -->
+                            <p class="card-text">When I was training for my first triathlon, I had no previous experience swimming competitively.
+                                But I wanted to know what kind of time I should be aiming for!
+                                So, I was curious: could I build a machine learning model to predict a swim time based on my age, gender, and expected bike/run times?
+                                The resulting project involved scraping the web for Olympic Triathlon race results, building a model, and deploying it on AWS.</p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="http://ec2-34-216-76-122.us-west-2.compute.amazonaws.com/" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
+                                    <a href="https://github.com/jgoffin/triathlon" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
                         </div>
                         <div class="card-footer text-muted">
                             Tags: Web-Scraping, Machine Learning, Flask, AWS
@@ -94,16 +128,19 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-header">
-                            Title
+                            Making Music with Machine Learning
                         </div>
                         <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
                         <div class="card-body">
-                            <h5 class="card-title">Making Music with ML</h5>
-                            <p class="card-text">With supporting </p>
-                            <span>
-                                <a href="http://indigomusicstudio.com" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
-                                <a href="https://github.com/jgoffin/2020-product-analytics-group-project-indigo" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
-                            </span>
+                            <!-- <h5 class="card-title">Making Music with ML</h5> -->
+                            <p class="card-text">This web-app uses ML to easily allow users to interpolate between music samples, and generate accompanying drum tracks.
+                                Built on top of Google Magenta, a neural network package for music. </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="http://indigomusicstudio.com" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
+                                    <a href="https://github.com/jgoffin/2020-product-analytics-group-project-indigo" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
                         </div>
                         <div class="card-footer text-muted">
                             Tags: Web-Development, Machine Learning, AWS Beanstalk
@@ -113,18 +150,23 @@
                 <div class="col-sm-6">
                     <div class="card">
                         <div class="card-header">
-                            Title
+                            Beer Style Classification
                         </div>
                         <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
                         <div class="card-body">
-                            <h5 class="card-title">Beer Style Classification</h5>
-                            <p class="card-text">With supporting </p>
-                            <span>
-                                <a href="https://github.com/jgoffin/beer-style-classification" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
-                            </span>
+                            <!-- <h5 class="card-title">Beer Style Classification</h5> -->
+                            <p class="card-text">Using data on Homebrewed Beer Recipe data, the style of each beer is predicted based on physical characteristic of the recipe (ABV, IBUs, etc.).
+                                This is a classification problem with a high number of classes, and a variety of different models are tried predict the style of beer (logistic regression, kNN, RandomForests).
+                                Model and pipelines built using sci-kit learn.
+                            </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="https://github.com/jgoffin/beer-style-classification" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
                         </div>
                         <div class="card-footer text-muted">
-                            Tags: Sci-kit Learn, Imbalanced Data
+                            Tags: Scikit Learn, Imbalanced Data
                         </div>
                     </div>
                 </div>
