--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!-- Page Content  -->
         <div id="content">
-            <nav id="headerDiv" class="navbar navbar-expand-lg navbar-light bg-light" style="display:none;">
+            <nav id="headerDiv" class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
