images, card styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <span>
                     <a href="https://github.com/jgoffin" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
                     <a href="https://www.linkedin.com/in/jacob-goffin" target="_blank"><i class='fab fa-linkedin' style='font-size:24px'></i></a>
-                    <a href="/blog" targe="_blank"><i class="material-icons" style='font-size:24px;'>&#xe0be;</i></a>
+                    <a href="mailto:jacobgoffin@gmail.com" targe="_blank"><i class="material-icons" style='font-size:24px;'>&#xe0be;</i></a>
             </span>
         </nav>
 
@@ -66,7 +66,7 @@
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fas fa-align-left"></i>
-                        <span>Show Profile</span>
+                        <span>Toggle Profile</span>
                     </button>
                     <!--
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,9 @@
                 </div>
             </nav>
             <h2>About Me</h2>
-            <p></p>
+            <p>Master's Student in Data Science at the University of San Francisco. Research Fellow at Accountability Counsel, a human rights non-profit.
+                My previous experience focused on building business intelligence platforms.
+                I'm looking for opportunities to build meaningful products, through software engineering and statistical modeling </p>
             <div class="line"></div>
 
             <h2>Projects</h2>
@@ -109,10 +111,13 @@
                         </div>
                         <!-- <img class="card-img-top" src="static/triathlon.png" alt="Card image cap"> -->
                         <div class="card-body">
+                            <div class="projectImg">
+                                <img src="static/triathlon.png">
+                            </div>
                             <!-- <h5 class="card-title">Predicting Triathlon Times</h5> -->
                             <p class="card-text">When I was training for my first triathlon, I had no previous experience swimming competitively.
-                                But I wanted to know what kind of time I should be aiming for!
-                                So, I was curious: could I build a machine learning model to predict a swim time based on my age, gender, and expected bike/run times?
+                                But, I wanted to know what kind of time I should be aiming for!
+                                So I was curious: could I build a machine learning model to predict a swim time based on my age, gender, and expected bike/run times?
                                 The resulting project involved scraping the web for Olympic Triathlon race results, building a model, and deploying it on AWS.</p>
                             <div class="text-center">
                                 <span>
@@ -134,8 +139,11 @@
                         </div>
                         <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
                         <div class="card-body">
+                            <div class="projectImg">
+                                <img src="static/indigo.png">
+                            </div>
                             <!-- <h5 class="card-title">Making Music with ML</h5> -->
-                            <p class="card-text">This web-app uses ML to easily allow users to interpolate between music samples, and generate accompanying drum tracks.
+                            <p class="card-text">The Indigo web-app uses ML to easily allow users to interpolate between music samples, and generate accompanying drum tracks.
                                 Built on top of Google Magenta, a neural network package for music. </p>
                             <div class="text-center">
                                 <span>
@@ -156,10 +164,13 @@
                         </div>
                         <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
                         <div class="card-body">
+                            <div class="projectImg">
+                                <img src="static/beer.png">
+                            </div>
                             <!-- <h5 class="card-title">Beer Style Classification</h5> -->
                             <p class="card-text">Using data on Homebrewed Beer Recipe data, the style of each beer is predicted based on physical characteristic of the recipe (ABV, IBUs, etc.).
-                                This is a classification problem with a high number of classes, and a variety of different models are tried predict the style of beer (logistic regression, kNN, RandomForests).
-                                Model and pipelines built using sci-kit learn.
+                                This is a classification problem with a high number of classes, and a variety of different models are used to predict the style of beer (logistic regression, kNN, RandomForests).
+                                Model and pipelines built using Scikit Learn.
                             </p>
                             <div class="text-center">
                                 <span>
