updating intro, font style

--- a/index.html
+++ b/index.html
@@ -94,14 +94,19 @@
                 </div>
             </nav>
             <h2>About Me</h2>
-            <p>Master's Student in Data Science at the University of San Francisco. Research Fellow at Accountability Counsel, a human rights non-profit.
-                My previous experience focused on building business intelligence platforms.
-                I'm looking for opportunities to build meaningful products, through software engineering and statistical modeling </p>
+            <p>Hi! Thanks for visiting my site. Here you'll find a few projects I've worked on recently.
+                I particularly enjoy getting to work on projects that involve all parts of the data science stack.
+                From data collection to modeling to software engineering/web-development.
+                Right now, I'm a Master's of Data Science student at the University of San Francisco. I'm also a current
+                Research Fellow at Accountability Counsel, a human rights non-profit.
+                I create web-scraping tools and build document search capabilities, in order to better track global human rights complaints.
+                My background is in data analytics and visualization, building business intelligence platforms.
+                Always keen to discuss data science or collaborate on new projects, reach out!
+            </p>
             <div class="line"></div>
 
             <h2>Projects</h2>
-            <p>Here are a few projects I have worked on. Hover for more info. Click on the links for the code repo, project website, and/or blog post. Always keen to receive feedback or collaborate on new projects. Reach out!</p>
-            <div class="line"></div>
+            <p>Click the icon links for the project website and/or code repo. </p>
 
             <div class="row">
                 <div class="col-sm-6">
@@ -118,7 +123,7 @@
                             <p class="card-text">When I was training for my first triathlon, I had no previous experience swimming competitively.
                                 But, I wanted to know what kind of time I should be aiming for!
                                 So I was curious: could I build a machine learning model to predict a swim time based on my age, gender, and expected bike/run times?
-                                The resulting project involved scraping the web for Olympic Triathlon race results, building a model, and deploying it on AWS.</p>
+                                The resulting project involved scraping the web for Olympic distance triathlon race results, building a model, and deploying it on AWS.</p>
                             <div class="text-center">
                                 <span>
                                     <a href="http://ec2-34-216-76-122.us-west-2.compute.amazonaws.com/" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
