--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
                         <!-- <img class="card-img-top" src="static/triathlon.png" alt="Card image cap"> -->
                         <div class="card-body">
                             <div class="projectImg">
-                                <img src="static/triathlon.png">
+                                <a href="http://ec2-34-216-76-122.us-west-2.compute.amazonaws.com/" target="_blank">
+                                    <img src="static/triathlon.png">
+                                </a>
                             </div>
                             <!-- <h5 class="card-title">Predicting Triathlon Times</h5> -->
                             <p class="card-text">When I was training for my first triathlon, I had no previous experience swimming competitively.
@@ -145,7 +147,9 @@
                         <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
                         <div class="card-body">
                             <div class="projectImg">
-                                <img src="static/indigo.png">
+                                <a href="http://indigomusicstudio.com" target="_blank">
+                                    <img src="static/indigo.png">
+                                </a>
                             </div>
                             <!-- <h5 class="card-title">Making Music with ML</h5> -->
                             <p class="card-text">The Indigo web-app uses ML to easily allow users to interpolate between music samples, and generate accompanying drum tracks.
@@ -153,7 +157,7 @@
                             <div class="text-center">
                                 <span>
                                     <a href="http://indigomusicstudio.com" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
-                                    <a href="https://github.com/jgoffin/2020-product-analytics-group-project-indigo" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
+                                    <a href="https://github.com/jgoffin/indigo" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
                                 </span>
                             </div>
                         </div>
@@ -170,7 +174,9 @@
                         <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
                         <div class="card-body">
                             <div class="projectImg">
-                                <img src="static/beer.png">
+                                <a href="https://github.com/jgoffin/beer-style-classification" target="_blank">
+                                    <img src="static/beer.png">
+                                </a>
                             </div>
                             <!-- <h5 class="card-title">Beer Style Classification</h5> -->
                             <p class="card-text">Using data on Homebrewed Beer Recipe data, the style of each beer is predicted based on physical characteristic of the recipe (ABV, IBUs, etc.).
