Add PANDA kaggle competition

--- a/index.html
+++ b/index.html
@@ -194,6 +194,33 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Prostate Cancer Detection
+                        </div>
+                        <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
+                        <div class="card-body">
+                            <div class="projectImg">
+                                <a href="https://github.com/jgoffin/prostate_cancer" target="_blank">
+                                    <img src="static/biopsy.jpg">
+                                </a>
+                            </div>
+                            <!-- <h5 class="card-title">Beer Style Classification</h5> -->
+                            <p class="card-text">A Kaggle competition, our goal is to predict the presence and severity of prostate cancer from biopsy slides.
+                                Better models will lead to better tools for pathologists in their workflow treating patients. Model built using PyTorch.
+                            </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="https://github.com/jgoffin/prostate_cancer" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Tags: Deep Learning, PyTorch, Image Data
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
