Added featimp and kmeans notebooks

--- a/index.html
+++ b/index.html
@@ -221,6 +221,67 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Visualization and Application of Clustering Methods
+                        </div>
+                        <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
+                        <div class="card-body">
+                            <div class="projectImg">
+                                <a href="./notebooks/kmeans.html" target="_blank">
+                                    <img src="static/clusters.png">
+                                </a>
+                            </div>
+                            <!-- <h5 class="card-title">Beer Style Classification</h5> -->
+                            <p class="card-text">
+                                <ul>
+                                    <li>How does basic unsupervised clustering work?</li>
+                                    <li>What are some issues with clustering that can be solved by smarter strategies?</li>
+                                    <li>How can clustering be applied to image compression? (Cute dog pictures involved)</li>
+                                </ul>
+                            <div class="text-center card-text"><p>Click in to find out!</p></div>
+                            </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="./notebooks/kmeans.html" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Tags: Unsupervised learning, Clustering, Image Compression, Spectral Clustering
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Exploration of Feature Importance Methods via Housing Data
+                        </div>
+                        <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
+                        <div class="card-body">
+                            <div class="projectImg">
+                                <a href="./notebooks/featimp.html" target="_blank">
+                                    <img src="static/house.jpg">
+                                </a>
+                            </div>
+                            <!-- <h5 class="card-title">Beer Style Classification</h5> -->
+                            <p class="card-text">
+                                Feature importance is hugely important in building better, simpler, and more generalizable machine learning models.
+                                In this notebook we will use housing data to compare different feature importance methods,
+                                understand features predictive capability, and potential pitfalls.
+                            </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="./notebooks/featimp.html" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Tags: Feature Importance, PCA, Jupyter, Python, Random Forests, Linear Regression
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
