minor mods, adding AC talk

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div id="experience">
                     <h6 style="text-decoration: underline;">Experience</h6>
-                    <p>Research Fellow @ Accountability Counsel</p>
+                    <p>Data Scientist @ Accountability Counsel</p>
                     <p>BI Analyst @ Uber</p>
                     <p>Consulant @ Tableau</p>
                 </div>
@@ -95,10 +95,10 @@
             </nav>
             <h2>About Me</h2>
             <p>Hi! Thanks for visiting my site. Here you'll find a few projects I've worked on recently.
-                I particularly enjoy getting to work on projects that involve all parts of the data science stack.
+                I particularly enjoy working on projects that involve all parts of the data science stack.
                 From data collection to modeling to software engineering/web-development.
                 Right now, I'm a Master's of Data Science student at the University of San Francisco. I'm also a current
-                Research Fellow at Accountability Counsel, a human rights non-profit.
+                Data Scientist at Accountability Counsel, a human rights non-profit.
                 I create web-scraping tools and build document search capabilities, in order to better track global human rights complaints.
                 My background is in data analytics and visualization, building business intelligence platforms.
                 Always keen to discuss data science or collaborate on new projects, reach out!
@@ -135,6 +135,62 @@
                         </div>
                         <div class="card-footer text-muted">
                             Tags: Web-Scraping, Machine Learning, Flask, AWS
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Prostate Cancer Detection
+                        </div>
+                        <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
+                        <div class="card-body">
+                            <div class="projectImg">
+                                <a href="https://github.com/hannahlyon/panda-project" target="_blank">
+                                    <img src="static/biopsy.jpg">
+                                </a>
+                            </div>
+                            <!-- <h5 class="card-title">Beer Style Classification</h5> -->
+                            <p class="card-text">A Kaggle competition, our goal is to predict the presence and severity of prostate cancer from biopsy slides.
+                                Better models will lead to better tools for pathologists in their workflow treating patients. Model built using PyTorch.
+                            </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="https://github.com/hannahlyon/panda-project" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Tags: Deep Learning, PyTorch, Image Data
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-header">
+                            Using Data to Address Accountability in Global Development Projects
+                        </div>
+                        <!-- <img class="card-img-top" src="static/triathlon.png" alt="Card image cap"> -->
+                        <div class="card-body">
+                            <div class="projectImg">
+                                <a href="https://youtu.be/nrOC0WofWsQ?t=996" target="_blank">
+                                    <img src="static/ac.svg">
+                                </a>
+                            </div>
+                            <!-- <h5 class="card-title">Predicting Triathlon Times</h5> -->
+                            <p class="card-text"> As part of my research fellowship with Accountability Counsel, I gave a presentation on the work I did
+                                building data-driven tools to help users track human-rights cases affected by global development projects. The audience are
+                                members of the Schmidt Family Foundation, University of San Francisco Data Institute, and general data science community.
+                            </p>
+                            <div class="text-center">
+                                <span>
+                                    <a href="https://youtu.be/nrOC0WofWsQ?t=996" target="_blank"><i class='fas fa-video' style='font-size:24px'></i></a>
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Tags: Web-Scraping, PDF Text-Parsing, Django, Elastic-Search, Public-Speaking
                         </div>
                     </div>
 
@@ -191,33 +247,6 @@
                         </div>
                         <div class="card-footer text-muted">
                             Tags: Scikit Learn, Imbalanced Data
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-header">
-                            Prostate Cancer Detection
-                        </div>
-                        <!-- <img class="card-img-top" src="static/indigo.png" alt="Card image cap"> -->
-                        <div class="card-body">
-                            <div class="projectImg">
-                                <a href="https://github.com/jgoffin/prostate_cancer" target="_blank">
-                                    <img src="static/biopsy.jpg">
-                                </a>
-                            </div>
-                            <!-- <h5 class="card-title">Beer Style Classification</h5> -->
-                            <p class="card-text">A Kaggle competition, our goal is to predict the presence and severity of prostate cancer from biopsy slides.
-                                Better models will lead to better tools for pathologists in their workflow treating patients. Model built using PyTorch.
-                            </p>
-                            <div class="text-center">
-                                <span>
-                                    <a href="https://github.com/jgoffin/prostate_cancer" target="_blank"><i class='fab fa-github' style='font-size:24px'></i></a>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="card-footer text-muted">
-                            Tags: Deep Learning, PyTorch, Image Data
                         </div>
                     </div>
                 </div>
