--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                             <div class="text-center">
                                 <span>
                                     <a href="https://youtu.be/nrOC0WofWsQ?t=996" target="_blank"><i class='fas fa-video' style='font-size:24px'></i></a>
+                                    <a href="https://accountabilityconsole.com/docsearch" target="_blank"><i class='fas fa-home' style='font-size:24px'></i></a>
                                 </span>
                             </div>
                         </div>
